--- a/VS2012/Assignment1.vcxproj
+++ b/VS2012/Assignment1.vcxproj
@@ -129,6 +129,10 @@
     <ClInclude Include="..\Source\Renderer.h" />
     <ClInclude Include="..\Source\World.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Library Include="..\ThirdParty\glew-1.12.0\lib\Release\Win32\glew32.lib" />
+    <Library Include="..\ThirdParty\glew-1.12.0\lib\Release\Win32\glew32s.lib" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
