--- a/VS2012/Assignment1.vcxproj
+++ b/VS2012/Assignment1.vcxproj
@@ -129,6 +129,7 @@
     <ClInclude Include="..\Source\CubeModel.h" />
     <ClInclude Include="..\Source\Renderer.h" />
     <ClInclude Include="..\Source\World.h" />
+    <ClInclude Include="..\Source\WormModel.h" />
   </ItemGroup>
   <ItemGroup>
     <Library Include="..\ThirdParty\glew-1.12.0\lib\Release\Win32\glew32.lib" />
