--- a/.gitattributes
+++ b/.gitattributes
@@ -66,4 +66,4 @@
 ###############################################################################
 #object files
 ###############################################################################
-#*.obj  merge=binary
+#*.obj  diff=astextplain
