--- a/VS2012/Assignment1.vcxproj.filters
+++ b/VS2012/Assignment1.vcxproj.filters
@@ -76,6 +76,9 @@
     <ClCompile Include="..\Source\Path.cpp">
       <Filter>Source Files\Model</Filter>
     </ClCompile>
+    <ClCompile Include="..\Objects\Obj file and Sheep Model Class\SheepModel.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Source\EventManager.h">
@@ -108,9 +111,13 @@
     <ClInclude Include="..\Source\Path.h">
       <Filter>Source Files\Model</Filter>
     </ClInclude>
+    <ClInclude Include="..\Objects\Obj file and Sheep Model Class\SheepModel.h" />
   </ItemGroup>
   <ItemGroup>
     <Library Include="..\ThirdParty\glew-1.12.0\lib\Release\Win32\glew32.lib" />
     <Library Include="..\ThirdParty\glew-1.12.0\lib\Release\Win32\glew32s.lib" />
+  </ItemGroup>
+  <ItemGroup>
+    <Object Include="..\Objects\Obj file and Sheep Model Class\SHEEP.OBJ" />
   </ItemGroup>
 </Project>
