Had to add existing item into project to get the PacWorm.obj model on the remote.

--- a/VS2012/Assignment1.vcxproj.filters
+++ b/VS2012/Assignment1.vcxproj.filters
@@ -49,4 +49,7 @@
   <ItemGroup>
     <ResourceCompile Include="Assignment1.rc" />
   </ItemGroup>
+  <ItemGroup>
+    <Object Include="..\Objects\Obj file and Sheep Model Class\PacWorm.obj" />
+  </ItemGroup>
 </Project>
