tiny obj linked

--- a/VS2012/Assignment1.vcxproj
+++ b/VS2012/Assignment1.vcxproj
@@ -137,6 +137,7 @@
     <ClInclude Include="..\Source\BSpline.h" />
     <ClInclude Include="..\Source\BSplineCamera.h" />
     <ClInclude Include="..\Source\Camera.h" />
+    <ClInclude Include="..\Source\ObjMesh.hpp" />
     <ClInclude Include="..\Source\ParsingHelper.h" />
     <ClInclude Include="..\Source\Path.h" />
     <ClInclude Include="..\Source\SphereModel.h" />
