--- a/VS2012/Assignment1.vcxproj
+++ b/VS2012/Assignment1.vcxproj
@@ -62,15 +62,15 @@
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>..\ThirdParty\glfw-3.0.4\include;..\ThirdParty\glew-1.10.0\include;..\ThirdParty\glew-1.12.0\include;..\ThirdParty\glfw-3.1\include;../ThirdParty/glm</AdditionalIncludeDirectories>
       <AdditionalIncludeDirectories>..\ThirdParty\glfw-3.1\include;../ThirdParty/glew-1.10.0/include;../ThirdParty/glm;..\ThirdParty\glew-1.12.0\include</AdditionalIncludeDirectories>
-      <AdditionalIncludeDirectories>../ThirdParty/glew-1.10.0/include;../ThirdParty/glfw-3.0.4/include;../ThirdParty/glm;..\ThirdParty\glew-1.12.0\include;..\ThirdParty\glfw-3.1\include;..\ThirdParty\tinyObj</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>../ThirdParty/glew-1.10.0/include;../ThirdParty/glfw-3.0.4/include;../ThirdParty/glm;..\ThirdParty\glew-1.12.0\include;..\ThirdParty\glfw-3.1\include;..\ThirdParty\tinyObj;..\ThirdParty\SOIL</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>C:\Users\Georges\Documents\Visual Studio 2013\COMP371Final\ThirdParty\glew-1.12.0\lib\Release\Win32;..\ThirdParty\glfw-3.1\lib-vc2013</AdditionalLibraryDirectories>
       <AdditionalLibraryDirectories>..\ThirdParty\glew-1.12.0\lib\Release\Win32;..\ThirdParty\glfw-3.1\lib-vc2013</AdditionalLibraryDirectories>
-      <AdditionalLibraryDirectories>..\ThirdParty\glfw-3.1\lib-vc2013;../ThirdParty/glew-1.12.0/lib/Release/Win32;../ThirdParty/glew-1.10.0/lib/Release/Win32;../ThirdParty/glfw-3.0.4/lib/Win32/lib-msvc110</AdditionalLibraryDirectories>
-      <AdditionalDependencies>opengl32.lib;glew32s.lib;glfw3.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>..\ThirdParty\glfw-3.1\lib-vc2013;../ThirdParty/glew-1.12.0/lib/Release/Win32;../ThirdParty/glew-1.10.0/lib/Release/Win32;../ThirdParty/glfw-3.0.4/lib/Win32/lib-msvc110;../ThirdParty/SOIL</AdditionalLibraryDirectories>
+      <AdditionalDependencies>opengl32.lib;glew32s.lib;glfw3.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;SOIL.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <BuildLog>
       <Path>
