--- a/Objects/Obj file and Sheep Model Class/Sheep/VS2012/Assignment1.vcxproj
+++ b/Objects/Obj file and Sheep Model Class/Sheep/VS2012/Assignment1.vcxproj
@@ -96,21 +96,20 @@
     </BuildLog>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <None Include="..\Scenes\CoordinateSystem.scene" />
-    <None Include="..\Scenes\PathScene.scene" />
+    <None Include="..\Scenes\BSplineScene.scene" />
     <None Include="..\Source\Shaders\BlueColor.fragmentshader" />
     <None Include="..\Source\Shaders\PathLines.fragmentshader" />
     <None Include="..\Source\Shaders\PathLines.vertexshader" />
     <None Include="..\Source\Shaders\SolidColor.vertexshader" />
     <None Include="..\Source\Shaders\SolidColor.fragmentshader" />
-    <None Include="..\Source\Shaders\TextureFragmentShader.fragmentshader" />
-    <None Include="..\Source\Shaders\TransformVertexShader.vertexshader" />
+    <None Include="..\Source\Shaders\SheepFragmentShader.fragmentshader" />
+    <None Include="..\Source\Shaders\SheepVertexShader.vertexshader" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\Source\BSpline.cpp" />
     <ClCompile Include="..\Source\BSplineCamera.cpp" />
     <ClCompile Include="..\Source\Camera.cpp" />
-    <ClCompile Include="..\Source\objloader.cpp" />
+    <ClCompile Include="..\Source\SheepObjloader.cpp" />
     <ClCompile Include="..\Source\Path.cpp" />
     <ClCompile Include="..\Source\SheepModel.cpp" />
     <ClCompile Include="..\Source\SphereModel.cpp" />
@@ -120,7 +119,7 @@
     <ClCompile Include="..\Source\Model.cpp" />
     <ClCompile Include="..\Source\CubeModel.cpp" />
     <ClCompile Include="..\Source\Renderer.cpp" />
-    <ClCompile Include="..\Source\texture.cpp" />
+    <ClCompile Include="..\Source\SheepTexture.cpp" />
     <ClCompile Include="..\Source\ThirdPersonCamera.cpp" />
     <ClCompile Include="..\Source\World.cpp" />
   </ItemGroup>
@@ -128,7 +127,7 @@
     <ClInclude Include="..\Source\BSpline.h" />
     <ClInclude Include="..\Source\BSplineCamera.h" />
     <ClInclude Include="..\Source\Camera.h" />
-    <ClInclude Include="..\Source\objloader.hpp" />
+    <ClInclude Include="..\Source\SheepObjloader.hpp" />
     <ClInclude Include="..\Source\ParsingHelper.h" />
     <ClInclude Include="..\Source\Path.h" />
     <ClInclude Include="..\Source\SheepModel.h" />
@@ -138,7 +137,7 @@
     <ClInclude Include="..\Source\Model.h" />
     <ClInclude Include="..\Source\CubeModel.h" />
     <ClInclude Include="..\Source\Renderer.h" />
-    <ClInclude Include="..\Source\texture.hpp" />
+    <ClInclude Include="..\Source\SheepTexture.hpp" />
     <ClInclude Include="..\Source\ThirdPersonCamera.h" />
     <ClInclude Include="..\Source\World.h" />
   </ItemGroup>
